@@ -1886,7 +1886,7 @@ function show_media_form($pid, $action = "newentry", $filename = "", $linktoid =
 					add_simple_tag($sourceLevel ." SOUR ". $sourceSOUR);
 					add_simple_tag(($sourceLevel+1) ." PAGE ". $sourcePAGE);
 					add_simple_tag(($sourceLevel+2) ." TEXT ". $sourceTEXT);
-					add_simple_tag(($sourceLevel+2) ." DATE ". $sourceDATE, "", $pgv_lang["date_of_entry"]);
+					add_simple_tag(($sourceLevel+2) ." DATE ". $sourceDATE, "", $factarray["DATA:DATE"]);
 					add_simple_tag(($sourceLevel+1) ." QUAY ". $sourceQUAY);
 					$sourceSOUR = "";
 				}
@@ -1934,7 +1934,7 @@ function show_media_form($pid, $action = "newentry", $filename = "", $linktoid =
 			add_simple_tag($sourceLevel ." SOUR ". $sourceSOUR);
 			add_simple_tag(($sourceLevel+1) ." PAGE ". $sourcePAGE);
 			add_simple_tag(($sourceLevel+2) ." TEXT ". $sourceTEXT);
-			add_simple_tag(($sourceLevel+2) ." DATE ". $sourceDATE, "", $pgv_lang["date_of_entry"]);
+			add_simple_tag(($sourceLevel+2) ." DATE ". $sourceDATE, "", $factarray["DATA:DATE"]);
 			add_simple_tag(($sourceLevel+1) ." QUAY ". $sourceQUAY);
 		}
 	}
