@@ -44,6 +44,7 @@ VERSION 4.2.1
 
 ?$pgv_lang["whatever"]								dd Monthname, year		Change codes and comments
 -----------------------------------------------------------------------------------------
++$pgv_lang["DATA:DATE"]               28 Feb 2009     A Previously $pgv_lang["date_of_entry"]
 
 
 VERSION 4.2.0
