@@ -51,7 +51,6 @@ $pgv_lang["ellipsis"]			= "\xE2\x80\xA6";
 $pgv_lang["showUnknown"]		= "Pokaż osoby o nieznanej płci";
 $pgv_lang["count"]				= "Liczba";
 $pgv_lang["age_differences"]	= "Pokaż różnicę wieku";
-$pgv_lang["date_of_entry"]		= "Data wpisu w oryginalnym źródle";
 $pgv_lang["multi_site_search"] 	= "Wyszukiwanie na zdalnych stronach";
 $pgv_lang["switch_lifespan"]	= "Pokaż wykres długości życia";
 $pgv_lang["switch_timeline"]	= "Pokaż wykres osi czasu";
@@ -872,6 +871,7 @@ $pgv_lang["mother_in_law"]		= "Teściowa";
 $pgv_lang["father_in_law"]		= "Teść";
 $pgv_lang["brother_in_law"]		= "Szwagier";
 $pgv_lang["sister_in_law"]		= "Szwagierka";
+$pgv_lang["brothers_wife"]		= "Bratowa"; // żona brata
 $pgv_lang["son_in_law"]			= "Zięć";
 $pgv_lang["daughter_in_law"]	= "Synowa";
 $pgv_lang["uncle_in_law"]		= "Wuj";
